refactor: centralize session logic in SessionService and clean SessionController