@@ -8,13 +8,13 @@ import com.openclassrooms.starterjwt.repository.SessionRepository;
 import com.openclassrooms.starterjwt.repository.UserRepository;
 import org.springframework.stereotype.Service;
 
+import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class SessionService {
-    private final SessionRepository sessionRepository;
 
+    private final SessionRepository sessionRepository;
     private final UserRepository userRepository;
 
     public SessionService(SessionRepository sessionRepository, UserRepository userRepository) {
@@ -26,52 +26,66 @@ public class SessionService {
         return this.sessionRepository.save(session);
     }
 
-    public void delete(Long id) {
-        this.sessionRepository.deleteById(id);
-    }
-
     public List<Session> findAll() {
         return this.sessionRepository.findAll();
     }
 
     public Session getById(Long id) {
-        return this.sessionRepository.findById(id).orElse(null);
+        return this.sessionRepository.findById(id)
+                .orElseThrow(NotFoundException::new);
     }
 
     public Session update(Long id, Session session) {
+        // Vérifie que la session existe avant de la mettre à jour
+        if (!this.sessionRepository.existsById(id)) {
+            throw new NotFoundException();
+        }
         session.setId(id);
         return this.sessionRepository.save(session);
     }
 
-    public void participate(Long id, Long userId) {
-        Session session = this.sessionRepository.findById(id).orElse(null);
-        User user = this.userRepository.findById(userId).orElse(null);
-        if (session == null || user == null) {
-            throw new NotFoundException();
-        }
+    public void delete(Long id) {
+        // rechercher une session et la supprimer ensuite
+        Session session = this.sessionRepository.findById(id)
+                .orElseThrow(NotFoundException::new);
 
-        boolean alreadyParticipate = session.getUsers().stream().anyMatch(o -> o.getId().equals(userId));
+        this.sessionRepository.delete(session);
+    }
+
+    public void participate(Long id, Long userId) {
+        Session session = this.sessionRepository.findById(id)
+                .orElseThrow(NotFoundException::new);
+
+        User user = this.userRepository.findById(userId)
+                .orElseThrow(NotFoundException::new);
+
+        boolean alreadyParticipate = session.getUsers().stream()
+                .anyMatch(o -> o.getId().equals(userId));
         if (alreadyParticipate) {
             throw new BadRequestException();
         }
 
         session.getUsers().add(user);
-
         this.sessionRepository.save(session);
     }
 
     public void noLongerParticipate(Long id, Long userId) {
-        Session session = this.sessionRepository.findById(id).orElse(null);
-        if (session == null) {
-            throw new NotFoundException();
-        }
+        Session session = this.sessionRepository.findById(id)
+                .orElseThrow(NotFoundException::new);
 
-        boolean alreadyParticipate = session.getUsers().stream().anyMatch(o -> o.getId().equals(userId));
+        boolean alreadyParticipate = session.getUsers().stream()
+                .anyMatch(o -> o.getId().equals(userId));
         if (!alreadyParticipate) {
             throw new BadRequestException();
         }
 
-        session.setUsers(session.getUsers().stream().filter(user -> !user.getId().equals(userId)).collect(Collectors.toList()));
+        session.setUsers(
+                new ArrayList<>(
+                        session.getUsers().stream()
+                                .filter(user -> !user.getId().equals(userId))
+                                .toList()
+                )
+        );
 
         this.sessionRepository.save(session);
     }
